--- a/mango16/admin/css/login.css
+++ b/mango16/admin/css/login.css
@@ -22,8 +22,17 @@
 body { background: #ebebeb; font-family: "Helvetica Neue","Hiragino Sans GB","Microsoft YaHei","\9ED1\4F53",Arial,sans-serif; color: #222; font-size: 12px; }
 .top_div{background: #008ead; width: 100%; height: 400px; }
 .tou { background: url(../images/tou.png) no-repeat; width: 97px; height: 92px; position: absolute; top: -87px; left: 140px; }
-.initial_left_hand { background: url(../images/hand.png) no-repeat; width: 30px; height: 20px; position: absolute; top: -12px; left: 100px; }
-.initial_right_hand { background: url(../images/hand.png) no-repeat; width: 30px; height: 20px; position: absolute; top: -12px; right: -112px; }
-.left_handing{ background: url("images/left-handing.png") no-repeat; width: 30px; height: 20px; position: absolute; top: -24px; left: 139px; }
-.right_handinging{ background: url("images/right_handing.png") no-repeat; width: 30px; height: 20px; position: absolute; top: -21px; left: 210px;}
+.left_hand{ background: url("../images/left_hand.png") no-repeat; width: 32px; height: 37px; position: absolute; top: -38px; left: 150px; }
+.right_hand{ background: url("../images/right_hand.png") no-repeat; width: 32px; height: 37px; position: absolute; top: -38px; right: -64px; }
+.initial_left_hand { background: url("../images/hand.png") no-repeat; width: 30px; height: 20px; position: absolute; top: -12px; left: 100px; }
+.initial_right_hand { background: url("../images/hand.png") no-repeat; width: 30px; height: 20px; position: absolute; top: -12px; right: -112px; }
+.left_handing{ background: url("../images/left-handing.png") no-repeat; width: 30px; height: 20px; position: absolute; top: -24px; left: 139px; }
+.right_handing{ background: url("../images/right_handing.png") no-repeat; width: 30px; height: 20px; position: absolute; top: -21px; left: 210px;}
 .login_div{margin: -200px auto auto; border-image: none; text-align: center; }
+.ipt{ border: 1px solid #d3d3d3; padding: 10px 10px; width: 290px; border-radius: 4px; padding-left: 35px; -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075); box-shadow: inset 0 1px 1px rgba(0,0,0,.075); -webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s; -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s; transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s }
+.ipt:focus{ border-color: #66afe9; outline: 0; -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6); box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6) }
+.row{ display: table-cell; vertical-align: middle; }
+/* centered columns styles */
+.row-centered { text-align:center; }
+.col-centered { display:inline-block; float:none; text-align:left; margin-right:-4px; }
+.owl{ width: 165px; height: 96px; position: absolute; left:110px}
